add card info responsive

--- a/src/html/templates/blocks/cards.njk
+++ b/src/html/templates/blocks/cards.njk
@@ -38,7 +38,7 @@
                 </li>
               </ul>
             </div>
-            <a class="card__btn btn btn--lg" href="#">Оформить карту</a>
+            <a class="card__btn btn btn--lg" href="#">Оформить <span>карту</span></a>
           </div>
           <div class="cards__item card card--hover card--blue swiper-slide">
             <div class="card__inner">
@@ -66,7 +66,7 @@
                 </li>
               </ul>
             </div>
-            <a class="card__btn btn btn--lg" href="#">Оформить карту</a>
+            <a class="card__btn btn btn--lg" href="#">Оформить <span>карту</span></a>
           </div>
           <div class="cards__item card card--hover card--white swiper-slide">
             <div class="card__inner">
@@ -94,7 +94,7 @@
                 </li>
               </ul>
             </div>
-            <a class="card__btn btn btn--lg" href="#">Оформить карту</a>
+            <a class="card__btn btn btn--lg" href="#">Оформить <span>карту</span></a>
           </div>
           <div class="cards__item card card--hover card--yellow swiper-slide">
             <div class="card__inner">
@@ -122,7 +122,7 @@
                 </li>
               </ul>
             </div>
-            <a class="card__btn btn btn--lg" href="#">Оформить карту</a>
+            <a class="card__btn btn btn--lg" href="#">Оформить <span>карту</span></a>
           </div>
         </div>
       </div>
