--- a/src/scss/components/common/_card.scss
+++ b/src/scss/components/common/_card.scss
@@ -106,6 +106,7 @@
   &__info-list {
     position: relative;
     z-index: 3;
+    max-width: 60%;
   }
 
   &__info-item {
@@ -208,8 +209,20 @@
       height: 90%;
     }
 
+    &::after {
+      right: 40px;
+    }
+
+    &__info {
+      padding: 24px 12px 24px 24px;
+    }
+
     &__holder {
       font-size: 16px;
+    }
+
+    &__btn {
+      right: 40px;
     }
 
     &__logo {
@@ -224,7 +237,11 @@
 
     &.is-active {
       &::before {
+        right: -51%;
+        bottom: -6%;
         border-radius: 20px;
+        width: 100%;
+        height: 100%;
         transform: translate(1%, -6%) rotate(0);
       }
 
@@ -271,6 +288,24 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .card {
+    &::after {
+      right: 10vw;
+      width: 120px;
+      height: 14px;
+    }
+
+    &__info-value {
+      font-size: 20px;
+    }
+
+    &__btn {
+      right: 15px;
+    }
+  }
+}
+
 @media screen and (max-width: 575px) {
   .card {
     padding: 18px;
@@ -280,6 +315,28 @@
     &::before {
       width: 100%;
       height: 100%;
+    }
+
+    &__info-caption {
+      font-size: 14px;
+    }
+
+    &__info-value {
+      font-size: 16px;
+    }
+
+    &__info {
+      z-index: 2;
+      padding: 18px;
+    }
+
+    &__info-item {
+      @include mb(5px);
+    }
+
+    &__btn {
+      padding: 12px 16px;
+      font-size: 13px;
     }
 
     &__inner {
@@ -292,6 +349,31 @@
 
     &__logo img {
       width: 80px;
+    }
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .card {
+    border-radius: 10px;
+
+    &::before {
+      border-radius: 10px;
+    }
+
+    &::after {
+      right: 8vw;
+      width: 90px;
+      height: 10px;
+    }
+
+    &__btn {
+      right: 5px;
+      bottom: 5px;
+
+      span {
+        display: none;
+      }
     }
   }
 }
