change card info padding

--- a/src/scss/components/common/_card.scss
+++ b/src/scss/components/common/_card.scss
@@ -367,6 +367,10 @@
       height: 10px;
     }
 
+    &__info {
+      padding: 12px;
+    }
+
     &__btn {
       right: 5px;
       bottom: 5px;
