--- a/src/scss/components/blocks/_services.scss
+++ b/src/scss/components/blocks/_services.scss
@@ -36,11 +36,11 @@
   &__item {
     position: relative;
     display: flex;
+    flex-grow: 1;
     flex-direction: column;
     justify-content: flex-end;
     border-radius: 20px;
     padding: 20px 30px;
-    height: 100%;
     background-position: center;
     background-size: 100% 100%;
     background-repeat: no-repeat;
